first commit after fork

--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ work_url: https://ceng.iyte.edu.tr/tr/people/yagiz-nalcakan/
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: https://dblp.org/pid/235/8284
-stackoverflow_id: "users/5106987/yağız-nalçakan"
+stackoverflow_id: "5106987/yağız-nalçakan"
 
 rss_icon: true
 
