first commit after fork

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ linkedin_username: yagiznalcakan
 scholar_userid: ZNENAEAAAAAJ
 orcid_id: 0000-0001-8867-842X
 medium_username: ynalcakan
-quora_username: Ya%C4%9F%C4%B1z-Nal%C3%A7akan
+quora_username: 
 publons_id: AAJ-5131-2020
 research_gate_profile: https://www.researchgate.net/profile/Yagiz-Nalcakan
 blogger_url: # your blogger URL
