--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ orcid_id: 0000-0001-8867-842X
 medium_username: ynalcakan
 quora_username: 
 publons_id: AAJ-5131-2020
-research_gate_profile: https://www.researchgate.net/profile/Yagiz-Nalcakan
+research_gate_profile: Yagiz-Nalcakan
 blogger_url: # your blogger URL
 work_url: https://ceng.iyte.edu.tr/tr/people/yagiz-nalcakan/
 keybase_username: # your keybase user name
