--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Yağız
 middle_name: 
-last_name: Nalçakan
+last_name: Nalçakan, PhD
 email: yagiznalcakan[at]gmail[dot]com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   
