--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ navbar_fixed: true
 footer_fixed: false
 
 # Dimensions
-max_width: 1200px
+max_width: 1000px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -266,7 +266,7 @@ enable_mansory:             true   # enables automatic project cards arangement
 enable_math:                true   # enables math typesetting (uses MathJax)
 enable_tooltips:            false  # enables automatic tooltip links generated
                                    # for each section titles on pages and posts
-enable_darkmode:            true   # enables switching between light/dark modes
+enable_darkmode:            false   # enables switching between light/dark modes
 enable_navbar_social:       false  # enables displaying social links in the
                                    # navbar on the about page
 enable_project_categories:  true   # enables categorization of projects into
