--- a/_config.yml
+++ b/_config.yml
@@ -82,17 +82,17 @@ panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Yağız Nalçakan's Personal Page  # your blog must have a name for it to show up in the nav bar
-blog_description: 
-permalink: /research/:year/:title/
+# blog_name: Yağız Nalçakan's Personal Page  # your blog must have a name for it to show up in the nav bar
+# blog_description: 
+# permalink: /research/:year/:title/
 
-# Pagination
-pagination:
-  enabled: true
+# # Pagination
+# pagination:
+#   enabled: true
 
-# Comments
-disqus_shortname: ynalcakan # put your disqus shortname
-# https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+# # Comments
+# disqus_shortname: ynalcakan # put your disqus shortname
+# # https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 # -----------------------------------------------------------------------------
 # Collections
