change publ icon colors

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,6 +1,6 @@
 "SIVP":
   url: https://www.springer.com/journal/11760
-  color: "#a6d991"
+  color: "#69a352"
 
 "CCIS":
   url: https://www.springer.com/series/7899
