--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ quora_username:
 publons_id: AAJ-5131-2020
 research_gate_profile: Yagiz-Nalcakan
 blogger_url: # your blogger URL
-work_url: https://cvrg-iyte.github.io/
+work_url: http://stl.yonsei.ac.kr/
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: https://dblp.org/pid/235/8284
