--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Install deps
         run: |
+          sudo apt-get update
+          sudo apt-get install -y imagemagick
           gem install bundler
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
